--- a/portal-web/build.xml
+++ b/portal-web/build.xml
@@ -14,7 +14,8 @@
 	<property name="vaadin.file" value="vaadin-6.8.12-liferay.zip" />
 	<property name="wsc.file" value="wsc_4.4.5.zip" />
 
-	<property name="front.end.js.web.path" value="../modules/frontend/frontend-js-web/src/META-INF/resources" />
+	<property name="front.end.js.web.path" value="../modules/frontend/frontend-js-web" />
+	<property name="front.end.js.web.src.path" value="${front.end.js.web.path}/src/META-INF/resources" />
 
 	<path id="jspc.common.classpath">
 		<pathelement path="docroot/WEB-INF/classes" />
@@ -249,29 +250,29 @@
 			<not>
 				<uptodate
 					srcfile="third-party/${alloyeditor.file}"
-					targetfile="${front.end.js.web.path}/html/js/editor/alloyeditor"
+					targetfile="${front.end.js.web.src.path}/html/js/editor/alloyeditor"
 				/>
 			</not>
 			<then>
-				<delete dir="${front.end.js.web.path}/html/js/editor/alloyeditor" />
+				<delete dir="${front.end.js.web.src.path}/html/js/editor/alloyeditor" />
 
 				<echo>${alloyeditor.file}</echo>
 
-				<unzip src="third-party/${alloyeditor.file}" dest="${front.end.js.web.path}/html/js/editor/_tmp" />
+				<unzip src="third-party/${alloyeditor.file}" dest="${front.end.js.web.src.path}/html/js/editor/_tmp" />
 
-				<copy todir="${front.end.js.web.path}/html/js/editor/alloyeditor" overwrite="true" preservelastmodified="true">
-					<fileset dir="${front.end.js.web.path}/html/js/editor/_tmp/alloy-editor-${alloyeditor.version}/alloy-editor" />
+				<copy todir="${front.end.js.web.src.path}/html/js/editor/alloyeditor" overwrite="true" preservelastmodified="true">
+					<fileset dir="${front.end.js.web.src.path}/html/js/editor/_tmp/alloy-editor-${alloyeditor.version}/alloy-editor" />
 				</copy>
 
-				<copy todir="${front.end.js.web.path}/html/js/editor/alloyeditor" overwrite="true" preservelastmodified="true">
-					<fileset dir="${front.end.js.web.path}/html/js/editor/alloyeditor_diffs" />
+				<copy todir="${front.end.js.web.src.path}/html/js/editor/alloyeditor" overwrite="true" preservelastmodified="true">
+					<fileset dir="${front.end.js.web.src.path}/html/js/editor/alloyeditor_diffs" />
 				</copy>
 
-				<delete dir="${front.end.js.web.path}/html/js/editor/_tmp" />
+				<delete dir="${front.end.js.web.src.path}/html/js/editor/_tmp" />
 			</then>
 			<else>
-				<copy todir="${front.end.js.web.path}/html/js/editor/alloyeditor" preservelastmodified="true">
-					<fileset dir="${front.end.js.web.path}/html/js/editor/alloyeditor_diffs" />
+				<copy todir="${front.end.js.web.src.path}/html/js/editor/alloyeditor" preservelastmodified="true">
+					<fileset dir="${front.end.js.web.src.path}/html/js/editor/alloyeditor_diffs" />
 				</copy>
 			</else>
 		</if>
@@ -346,16 +347,16 @@
 			<not>
 				<uptodate
 					srcfile="third-party/${ckeditor.file}"
-					targetfile="${front.end.js.web.path}/html/js/editor/ckeditor"
+					targetfile="${front.end.js.web.src.path}/html/js/editor/ckeditor"
 				/>
 			</not>
 			<then>
-				<delete dir="${front.end.js.web.path}/html/js/editor/ckeditor" />
+				<delete dir="${front.end.js.web.src.path}/html/js/editor/ckeditor" />
 
-				<unzip src="third-party/${ckeditor.file}" dest="${front.end.js.web.path}/html/js/editor" />
+				<unzip src="third-party/${ckeditor.file}" dest="${front.end.js.web.src.path}/html/js/editor" />
 
-				<copy todir="${front.end.js.web.path}/html/js/editor/ckeditor" overwrite="true" preservelastmodified="true">
-					<fileset dir="${front.end.js.web.path}/html/js/editor/ckeditor_diffs" />
+				<copy todir="${front.end.js.web.src.path}/html/js/editor/ckeditor" overwrite="true" preservelastmodified="true">
+					<fileset dir="${front.end.js.web.src.path}/html/js/editor/ckeditor_diffs" />
 				</copy>
 
 				<antcall target="build-ckeditor-plugins-scayt" />
@@ -363,17 +364,17 @@
 				<antcall target="build-ckeditor-plugins-wsc" />
 			</then>
 			<else>
-				<copy todir="${front.end.js.web.path}/html/js/editor/ckeditor" preservelastmodified="true">
-					<fileset dir="${front.end.js.web.path}/html/js/editor/ckeditor_diffs" />
+				<copy todir="${front.end.js.web.src.path}/html/js/editor/ckeditor" preservelastmodified="true">
+					<fileset dir="${front.end.js.web.src.path}/html/js/editor/ckeditor_diffs" />
 				</copy>
 			</else>
 		</if>
 	</target>
 
 	<target name="build-ckeditor-plugins-bbcode">
-		<concat destfile="${front.end.js.web.path}/html/js/editor/ckeditor_diffs/plugins/bbcode/bbcode_parser.js">
+		<concat destfile="${front.end.js.web.src.path}/html/js/editor/ckeditor_diffs/plugins/bbcode/bbcode_parser.js">
 			<filelist
-				dir="${front.end.js.web.path}/html/js/editor/ckeditor_diffs/plugins/bbcode"
+				dir="${front.end.js.web.src.path}/html/js/editor/ckeditor_diffs/plugins/bbcode"
 				files="bbcode_utils.js,lexer.js,parser.js,converter.js"
 			/>
 		</concat>
@@ -381,11 +382,11 @@
 
 	<target name="build-ckeditor-plugins-creole">
 		<mirrors-get
-			dest="${front.end.js.web.path}/html/js/editor/ckeditor_diffs/plugins/creole/creole_parser.js"
+			dest="${front.end.js.web.src.path}/html/js/editor/ckeditor_diffs/plugins/creole/creole_parser.js"
 			src="http://www.ivan.fomichev.name/2008/04/javascript-creole-10-wiki-markup-parser.html"
 		/>
 
-		<loadfile property="creole_parser.content" srcfile="${front.end.js.web.path}/html/js/editor/ckeditor_diffs/plugins/creole/creole_parser.js" />
+		<loadfile property="creole_parser.content" srcfile="${front.end.js.web.src.path}/html/js/editor/ckeditor_diffs/plugins/creole/creole_parser.js" />
 
 		<script classpathref="project.classpath" language="beanshell">
 			<![CDATA[
@@ -481,7 +482,7 @@
 			]]>
 		</script>
 
-		<echo file="${front.end.js.web.path}/html/js/editor/ckeditor_diffs/plugins/creole/creole_parser.js">${creole_parser.content}</echo>
+		<echo file="${front.end.js.web.src.path}/html/js/editor/ckeditor_diffs/plugins/creole/creole_parser.js">${creole_parser.content}</echo>
 	</target>
 
 	<target name="build-ckeditor-plugins-scayt">
@@ -498,7 +499,7 @@
 		</if>
 
 		<unzip
-			dest="${front.end.js.web.path}/html/js/editor/ckeditor/plugins"
+			dest="${front.end.js.web.src.path}/html/js/editor/ckeditor/plugins"
 			src="third-party/${scayt.file}"
 		/>
 	</target>
@@ -517,7 +518,7 @@
 		</if>
 
 		<unzip
-			dest="${front.end.js.web.path}/html/js/editor/ckeditor/plugins"
+			dest="${front.end.js.web.src.path}/html/js/editor/ckeditor/plugins"
 			src="third-party/${wsc.file}"
 		/>
 	</target>
@@ -754,26 +755,26 @@
 			<not>
 				<uptodate
 					srcfile="third-party/${tinymce.file}"
-					targetfile="${front.end.js.web.path}/html/js/editor/tiny_mce"
+					targetfile="${front.end.js.web.src.path}/html/js/editor/tiny_mce"
 				/>
 			</not>
 			<then>
-				<delete dir="${front.end.js.web.path}/html/js/editor/tiny_mce" />
-				<delete dir="${front.end.js.web.path}/html/js/editor/tinymce" />
+				<delete dir="${front.end.js.web.src.path}/html/js/editor/tiny_mce" />
+				<delete dir="${front.end.js.web.src.path}/html/js/editor/tinymce" />
 
-				<unzip src="third-party/${tinymce.file}" dest="${front.end.js.web.path}/html/js/editor" />
+				<unzip src="third-party/${tinymce.file}" dest="${front.end.js.web.src.path}/html/js/editor" />
 
-				<move todir="${front.end.js.web.path}/html/js/editor/tiny_mce" preservelastmodified="true">
-					<fileset dir="${front.end.js.web.path}/html/js/editor/tinymce/js/tinymce">
+				<move todir="${front.end.js.web.src.path}/html/js/editor/tiny_mce" preservelastmodified="true">
+					<fileset dir="${front.end.js.web.src.path}/html/js/editor/tinymce/js/tinymce">
 						<include name="*/**" />
 					</fileset>
 				</move>
 
-				<copy todir="${front.end.js.web.path}/html/js/editor/tiny_mce" overwrite="true" preservelastmodified="true">
-					<fileset dir="${front.end.js.web.path}/html/js/editor/tiny_mce_diffs" />
+				<copy todir="${front.end.js.web.src.path}/html/js/editor/tiny_mce" overwrite="true" preservelastmodified="true">
+					<fileset dir="${front.end.js.web.src.path}/html/js/editor/tiny_mce_diffs" />
 				</copy>
 
-				<delete dir="${front.end.js.web.path}/html/js/editor/tinymce" />
+				<delete dir="${front.end.js.web.src.path}/html/js/editor/tinymce" />
 			</then>
 		</if>
 	</target>
@@ -818,9 +819,9 @@
 		<delete dir="classes" />
 		<delete dir="docroot/dtd" />
 		<delete dir="${front.end.js.web.path}/html/js/aui" />
-		<delete dir="${front.end.js.web.path}/html/js/editor/alloyeditor" />
-		<delete dir="${front.end.js.web.path}/html/js/editor/ckeditor" />
-		<delete dir="${front.end.js.web.path}/html/js/editor/tiny_mce" />
+		<delete dir="${front.end.js.web.src.path}/html/js/editor/alloyeditor" />
+		<delete dir="${front.end.js.web.src.path}/html/js/editor/ckeditor" />
+		<delete dir="${front.end.js.web.src.path}/html/js/editor/tiny_mce" />
 		<delete dir="docroot/html/portal/aui" />
 		<delete dir="docroot/html/themes/_unstyled/images/aui/" />
 		<delete dir="docroot/html/themes/classic/color_schemes" />
