--- a/.gitignore
+++ b/.gitignore
@@ -153,6 +153,8 @@ cobertura.ser
 
 /portal-web/docroot/html/ALLOY_ZIP
 
+/portal-web/docroot/html/css/common/bourbon
+
 /portal-web/docroot/html/icons/_sprite.*
 
 /portal-web/docroot/html/VAADIN
