--- a/modules/frontend/frontend-css-web/build.xml
+++ b/modules/frontend/frontend-css-web/build.xml
@@ -20,7 +20,11 @@
 
 		<property name="alloy.bootstrap.file" value="bootstrap-sass-${alloy.bootstrap.version}.zip" />
 
-		<property name="alloy.bootstrap.tmp.dir" value="tmp/ALLOY_BOOTSTRAP_ZIP" />
+		<tstamp>
+			<format property="tstamp.value" pattern="yyyyMMddkkmmssSSS" />
+		</tstamp>
+
+		<property name="alloy.bootstrap.tmp.dir" value="${tstamp.value}/ALLOY_BOOTSTRAP_ZIP" />
 
 		<if>
 			<not>
@@ -63,7 +67,7 @@
 
 				<!-- Clean up -->
 
-				<delete dir="${alloy.bootstrap.tmp.dir}" />
+				<delete dir="${tstamp.value}" />
 			</then>
 		</if>
 	</target>
@@ -162,7 +166,11 @@
 
 		<property name="bourbon.file" value="bourbon-${bourbon.version}.zip" />
 
-		<property name="bourbon.tmp.dir" value="tmp/BOURBON_ZIP" />
+		<tstamp>
+			<format property="tstamp.value" pattern="yyyyMMddkkmmssSSS" />
+		</tstamp>
+
+		<property name="bourbon.tmp.dir" value="${tstamp.value}/temp" />
 
 		<if>
 			<not>
@@ -172,7 +180,6 @@
 				/>
 			</not>
 			<then>
-				<delete dir="${bourbon.tmp.dir}" />
 				<delete dir="${bourbon.deploy}" />
 
 				<unzip src="${third.party.dir}/${bourbon.file}" dest="${bourbon.tmp.dir}" />
@@ -183,7 +190,7 @@
 					<fileset dir="${bourbon.lib.dir}/" />
 				</copy>
 
-				<delete dir="${bourbon.tmp.dir}" />
+				<delete dir="${tstamp.value}" />
 			</then>
 		</if>
 	</target>
