--- a/modules/build.xml
+++ b/modules/build.xml
@@ -48,6 +48,7 @@
 		<dirset dir="apps/xsl-content" includes="*" />
 		<dirset dir="core" includes="*" />
 		<dirset dir="frontend" includes="*" />
+		<dirset dir="frontend/frontend-taglibs" includes="*" />
 		<dirset dir="portal" excludes="portal-search-lucene,portal-taglib-aui-form-extension-sample" includes="*" />
 		<dirset dir="util" includes="pmd,portal-tools-sample-sql-builder,sass-compiler-jni" />
 	</path>
